--- a/booking.html
+++ b/booking.html
@@ -11,7 +11,7 @@
   <header>
     <div class="header-container">
       <div class="logo">
-        <img src="/images/logo.png" alt="Logo">
+        <img src="images/logo.png" alt="Logo">
       </div>
       <nav class="left-nav">
         <a href="index.html">Home</a>
