--- a/booking.html
+++ b/booking.html
@@ -27,42 +27,42 @@
       <h2>Now Showing</h2>
       <div class="movie-list">
         <div class="movie">
-          <img src="/images/avengers.png" alt="Avengers: Secret Wars">
+          <img src="images/avengers.png" alt="Avengers: Secret Wars">
           <h3>Avengers: Secret Wars</h3>
           <p>Price: $14</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="14" data-movie="Avengers: Secret Wars"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/joker.jpg" alt="Joker">
+          <img src="images/joker.jpg" alt="Joker">
           <h3>Joker</h3>
           <p>Price: $9</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="9" data-movie="Joker"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/insideout2.jpeg" alt="Inside Out 2">
+          <img src="images/insideout2.jpeg" alt="Inside Out 2">
           <h3>Inside Out 2</h3>
           <p>Price: $11</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="11" data-movie="Inside Out 2"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/missionimpossible.jpg" alt="Mission: Impossible 7">
+          <img src="images/missionimpossible.jpg" alt="Mission: Impossible 7">
           <h3>Mission: Impossible 7</h3>
           <p>Price: $13</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="13" data-movie="Mission: Impossible 7"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/batman.jpg" alt="The Batman: Part II">
+          <img src="images/batman.jpg" alt="The Batman: Part II">
           <h3>The Batman: Part II</h3>
           <p>Price: $12</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="12" data-movie="The Batman: Part II"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images//kungfu.jpg" alt="Kung Fu Panda 4">
+          <img src="images//kungfu.jpg" alt="Kung Fu Panda 4">
           <h3>Kung Fu Panda 4</h3>
           <p>Price: $10</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="10" data-movie="Kung Fu Panda 4"></label>
@@ -75,42 +75,42 @@
       <h2>Upcoming Movies</h2>
       <div class="movie-list">
         <div class="movie">
-          <img src="/images/thedictator.jpeg" alt="The Dictator">
+          <img src="images/thedictator.jpeg" alt="The Dictator">
           <h3>The Dictator</h3>
           <p>Price: $11</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="11" data-movie="The Dictator"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/avatar3.jpeg" alt="Avatar 3">
+          <img src="images/avatar3.jpeg" alt="Avatar 3">
           <h3>Avatar 3</h3>
           <p>Price: $13</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="13" data-movie="Avatar 3"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/shrek5.jpg" alt="Shrek 5">
+          <img src="images/shrek5.jpg" alt="Shrek 5">
           <h3>Shrek 5</h3>
           <p>Price: $10</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="10" data-movie="Shrek 5"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/spiderman.jpeg" alt="Spider-Man: Beyond the Spider-Verse">
+          <img src="images/spiderman.jpeg" alt="Spider-Man: Beyond the Spider-Verse">
           <h3>Spider-Man: Beyond the Spider-Verse</h3>
           <p>Price: $12</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="12" data-movie="Spider-Man"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/deadpooland.jpg" alt="Deadpool & Wolverine">
+          <img src="images/deadpooland.jpg" alt="Deadpool & Wolverine">
           <h3>Deadpool & Wolverine</h3>
           <p>Price: $13</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="13" data-movie="Deadpool & Wolverine"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/wicked1.jpeg" alt="Wicked Part One">
+          <img src="images/wicked1.jpeg" alt="Wicked Part One">
           <h3>Wicked (Part One)</h3>
           <p>Price: $12</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="12" data-movie="Wicked"></label>
@@ -123,28 +123,28 @@
       <h2>Premium Screenings</h2>
       <div class="movie-list">
         <div class="movie">
-          <img src="/images/dunepart2.jpeg" alt="Dune Part Two">
+          <img src="images/dunepart2.jpeg" alt="Dune Part Two">
           <h3>Dune: Part Two</h3>
           <p>Price: $20</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="20" data-movie="Dune Part Two"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/Oppenheimer.jpeg" alt="Oppenheimer">
+          <img src="images/Oppenheimer.jpeg" alt="Oppenheimer">
           <h3>Oppenheimer</h3>
           <p>Price: $18</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="18" data-movie="Oppenheimer"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/avatarway.jpeg" alt="Avatar: The Way of Water (3D Remaster)">
+          <img src="images/avatarway.jpeg" alt="Avatar: The Way of Water (3D Remaster)">
           <h3>Avatar: The Way of Water (3D Remaster)</h3>
           <p>Price: $19</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="19" data-movie="Avatar: The Way of Water"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/topgun.jpg" alt="Top Gun: Maverick">
+          <img src="images/topgun.jpg" alt="Top Gun: Maverick">
           <h3>Top Gun: Maverick (Premium Audio Edition)</h3>
           <p>Price: $18</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="18" data-movie="Top Gun: Maverick"></label>
@@ -157,28 +157,28 @@
       <h2>3D & IMAX Shows</h2>
       <div class="movie-list">
         <div class="movie">
-          <img src="/images/avatarway.jpeg" alt="Avatar IMAX">
+          <img src="images/avatarway.jpeg" alt="Avatar IMAX">
           <h3>Avatar: The Way of Water (3D IMAX)</h3>
           <p>Price: $18</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="18" data-movie="Avatar: IMAX"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/doctorstrange.jpg" alt="Doctor Strange">
+          <img src="images/doctorstrange.jpg" alt="Doctor Strange">
           <h3>Doctor Strange: Multiverse of Madness (3D)</h3>
           <p>Price: $16</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="16" data-movie="Doctor Strange"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/guardianofgalaxy.jpg" alt="Guardians of the Galaxy Vol. 3">
+          <img src="images/guardianofgalaxy.jpg" alt="Guardians of the Galaxy Vol. 3">
           <h3>Guardians of the Galaxy Vol. 3 (IMAX Enhanced)</h3>
           <p>Price: $17</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="17" data-movie="Guardians 3"></label>
           <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="movie">
-          <img src="/images/jurassic.jpg" alt="Jurassic World">
+          <img src="images/jurassic.jpg" alt="Jurassic World">
           <h3>Jurassic World: Dominion (3D)</h3>
           <p>Price: $15</p>
           <label>Seats: <input type="number" min="0" value="0" data-price="15" data-movie="Jurassic World"></label>
